# MeanField

./: CMakeLists.txt  lanciaNvolte.sh  lanciaNvolte_batch.sh  main.cpp
include/: TLattice.h  TParticle.h  TSite.h
src/: TLattice.cpp  TParticle.cpp  TSite.cpp
